--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "our-json": "json-server --watch data/mangas.json --port 8000"
+    "our-json": "json-server --watch data/mangas.json --port 8000",
+    "start": "concurrently \"vite\" \"json-server --watch data/mangas.json --port 8000\""
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "bootstrap": "^5.3.3",
+    "concurrently": "^8.2.2",
     "eslint-plugin-react": "^7.34.0",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
